hard-gists/391fb178d7c06e8dc7e4051d9b5395af/run.log
=== Docker Run Log for 391fb178d7c06e8dc7e4051d9b5395af ===
Started at: Mi 29. Okt 14:05:56 CET 2025

[2025-10-29 14:05:57] START: Running container for 391fb178d7c06e8dc7e4051d9b5395af
[2025-10-29 14:05:57] SUCCESS: Container 35e4a85355b6ef246651585f6295689344bbb52983d7cb33ea482c3a40b75329 started for 391fb178d7c06e8dc7e4051d9b5395af
=== Container logs for 391fb178d7c06e8dc7e4051d9b5395af ===
  File "/snippet.py", line 22
    print "Couldn't import TtsActionGoal, we won't speak"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 391fb178d7c06e8dc7e4051d9b5395af ===
[2025-10-29 14:05:59] INFO: Container 35e4a85355b6ef246651585f6295689344bbb52983d7cb33ea482c3a40b75329 has stopped
